--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@openspacelabs/react-native-zoomable-view": "^2.1.5",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "eas-cli": "^5.9.0",
     "expo": "~49.0.15",
     "expo-dev-client": "~2.4.12",
@@ -19,6 +21,8 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-bluetooth-classic": "^1.60.0-rc.29",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "with-rn-bluetooth-classic": "^1.0.5"
   },
   "devDependencies": {
